<resources>
    <string name="app_name">1KAPanel</string>

    <string name="loadPage">Loading page&#8230;</string>
    <string name="sendingRequest">Sending request&#8230;</string>

    <!-- network and communication -->
    <string name="general_mobile_network_error">No internet connection</string>
    <string name="general_remote_server_error">The remote server can not be reached. Possible cause is weak internet connection.</string>
    <string name="gathering_data_progress">Obtaining information&#8230;</string>

    <!-- main form -->
    <string name="tryAgain">Try again</string>

    <!-- LOGIN FORM -->
    <string name="vpis">Login</string>
    <string name="identifier">Identifier</string>
    <string name="identifierNotExist">Identifier does not exist</string>

    <!-- HOME MENU -->
    <string name="merge_identifier">Merge with identifier</string>
    <string name="my_geofences">My geofences</string>
    <string name="my_locations">My locations</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="my_questionnaires">My questionnaires</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>

    <!-- MERGE IDENTIFIER FORM -->
    <string name="merge_identifier_button">Merge</string>
    <string name="identifiers_merged">You successfully merged identifier</string>
    <string name="invalid_identifier">You entered an incorrect identifier</string>
    <string name="already_has_access">You already have access to this survey</string>
    <!-- SURVEY CONSENT FORM -->
    <string name="survey_consent_title">Participation in new study</string>
    <string name="survey_consent_desc">To participate in this survey, we need your permission to following information:</string>
    <string name="survey_consent_question">Do you consent to the collection of data for the purpose of this research?</string>
    <string name="survey_consent_permission_notifications">Showing notifications</string>
    <string name="survey_consent_permission_location">Access to your locations</string>
    <string name="survey_consent_permission_sensors">Recording motion sensor data</string>
    <string name="survey_consent_permission_button_consent">Consent</string>
    <string name="survey_consent_permission_button_decline">Decline</string>


    <!-- Surveys fragment -->
    <string name="surveys">Surveys</string>
    <string name="no_surveys">No active surveys here</string>
    <!-- Alert dialog for answer delete -->
    <string name="unit_delete_alert_title">Delete answer</string>
    <string name="unit_delete_alert_title_entry">Delete data entry</string>
    <string name="unit_delete_alert_desc">Are you sure to delete this answer: \n</string>
    <string name="unit_delete_alert_desc_entry">Are you sure to delete this data entry: \n</string>
    <!-- Surveys to fill fragment -->
    <!-- List items in Surveys to fill fragment -->
    <string name="litem_time">Time</string>
    <string name="litem_geofence">Geofence</string>
    <string name="litem_entry">Entry</string>
    <string name="litem_questionnaire">Questionnaire</string>

    <!-- Subscriptions list fragment -->
    <string name="subscriptions">Subscriptions</string>
    <string name="no_subscriptions">No active subscriptions here</string>
    <string name="dialog_unsubscribed_title">Unsubscribed</string>
    <string name="dialog_unsubscribed_message">You have unsubscribed this survey</string>
    <string name="dialog_unsubscribed_ok">OK</string>

    <!-- Study page and its frakments -->
    <string name="questionnaires_to_fill">To fill</string>
    <string name="filled_questionnaires">Filled</string>
    <string name="preponed_study_title">Study:&#160;</string>
    <!-- Subscription info fragment -->
    <string name="subscription_info">Subscription info</string>
    <string name="btn_unsubscribe">Unsubscribe</string>
    <string name="dialog_unsubscribe_title">Unsubscribe</string>
    <string name="dialog_unsubscribe_message">Are you sure to unsubscribe this survey?</string>
    <string name="dialog_unsubscribe_yes">Yes</string>
    <string name="dialog_unsubscribe_no">No</string>
    <string name="subscription_description_title">Study description</string>
    <string name="subscription_permissions_title">List of permissions to participate in this study</string>

    <!-- Pick location form -->
    <string name="pick_location">Pick location</string>
    <string name="pick_location_done_button">Done</string>

    <!-- Geofences fragment -->
    <string name="geofences">Geofences</string>

    <!-- nextPin Collection app -->
    <string name="pref_settings">Settings</string>

    <!-- Settings form -->
    <string name="pref_cat_sys_state">Statistics</string>
    <string name="Stop_Tracking">Stop tracking</string>
    <string name="stop_desc">Currently app is tracking. Clicking this will make it stop.</string>
    <string name="Start_Tracking">Start tracking</string>
    <string name="start_desc">Currently app is stopped. Clicking this will make start tracking.</string>
    <string name="refresh_alarms">Refresh timers (when to show notifications)</string>
    <string name="refresh_geofences">Refresh geofences (where to show notifications)</string>
    <string name="refresh_tracking">Refresh tracking (gathering location data during survey)</string>
    <string name="pref_tracking_number">Number of stored (unsent) locations and activities:</string>
    <string name="pref_tracking_number_sum">Locations: %1$d, recognized activities: %2$d</string>

    <!-- GPS notification -->
    <string name="turn_gps_on">Please, turn on GPS</string>

    <!-- Survey notification -->
    <string name="default_alarm_notification_title">You have %d new questionnaires</string>
    <string name="notif_push_channel_title">Survey notifications</string>
    <string name="notif_persistant_channel_title">Important notifications</string>
    <string name="notif_default_message">Check it out!</string>

    <!-- Dialog private name -->

    <!-- PERMISSIONS -->
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality</string>

    <!-- GEOFENCING -->
    <!-- Transition type strings -->
    <!--<string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_dwell">Dwell</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>-->

    <!-- ACTIVITY TRACKING -->
    <string name="iagree">I agree</string>
    <string name="unsubscribe">Unsubscribe</string>

    <!-- LOC TRACKING -->
    <string name="tracking_permission_alert_title">Tracking permission</string>
    <string name="tracking_permission_alert_desc">To participate in survey \"%1$s\", permission is needed to track your location. Your location and sensor data will be processed and stored on remote server. All processed data can be seen in \"My Location\" section.</string>
    <string name="tracking_notification_permission_title">Permission is needed</string>
    <string name="tracking_notification_permission_desc">Survey:&#160;</string>
    <string name="tracking_notification_title">Tracking for survey</string>
    <string name="tracking_notification_desc_on">Currently app is tracking for surveying purposes</string>
    <string name="tracking_notification_desc_off">Please turn on tracking for surveying purposes</string>
    <string name="tracking_notification_start">Start</string>
    <string name="tracking_notification_stop">Stop</string>
    <string name="tracking_notification_pause">Pause</string>
    <string name="tracking_notification_start_title">Turn on tracking</string>
    <string name="tracking_notification_start_desc">You are participating in survey(s) that requires tracking</string>
    <string name="menu_toggle_clustering">Clustering On/Off</string>
    <string name="my_location_infowindow_snippet">Click to remove</string>
    <string name="location_delete_alert_title">Delete location</string>
    <string name="location_delete_alert_desc">Are you sure to delete this location?</string>
    <string name="location_delete_alert_no">Cancel</string>
    <string name="location_delete_alert_yes">Yes</string>
    <string name="no_detected_activities">No detected activities</string>

    <!-- Dialog change activity -->
    <!-- nextPin Activity type names -->

    <!-- ABOUT FORM -->
    <string name="about_app">About</string>
    <string name="cdi_html">
    <![CDATA[
    <i>
    <div style=\"text-align: center; color: #4d4d4d;\">
    <br />
    <p>Centre for Social Informatics,</p>
    <p>Faculty of Social Sciences, University of Ljubljana</p>
    <p>Kardeljeva pl. 5, 1000 Ljubljana</p>
    <p>E-mail: <a href="mailto:cdi@fdv.uni-lj.si">cdi@fdv.uni-lj.si</a></p>
    <p>URL: <a href="http://www.cdi.si">www.cdi.si</a></p>
    <p>Phone: 030/702-788 </p>
    <br />
    <a target="_blank" href="https://www.1ka.si/d/en/about/terms-of-use/general-terms">General terms</a>,
    <a target="_blank" href="https://www.1ka.si/d/en/about/terms-of-use/privacy-policy">Privacy policy</a>,
    <a target="_blank" href="https://www.1ka.si/d/en/about/terms-of-use/cookie-policy">Cookie policy</a>,
    <a target="_blank" href="https://www.1ka.si/d/en/about/terms-of-use/anti-spam-policy">Antispam policy</a><br /></p>
    </div>
    <div style=\"text-align: center; center; color: #4d4d4d;\">
    <p><a href="https://www.1ka.si/d/en/about/1ka-application">Copyright</a> (&copy;) 2002-2020 University of Ljubljana, Faculty of Social Sciences, Centre for Social Informatics</p>
    <p>1KA Panel version: %s</p>
    <p>In-app icons by <a target="_blank" href="https://icons8.com/">icons8</a>.</p>
    </div>
    </i>
    ]]>
    </string>

    <string name="arrs_html">
    <![CDATA[
        <div style=\"color: #4d4d4d;\">
        <p>The project \'Integration of mobile devices into survey research in social sciences: Development of a comprehensive methodological approach\' was financially supported by the Slovenian Research Agency</p>
        </div>
    ]]>
    </string>
</resources>
