<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_padding_left_right"
        android:paddingLeft="@dimen/default_padding_left_right"
        android:paddingTop="@dimen/default_padding_top_bottom"
        android:paddingEnd="@dimen/default_padding_left_right"
        android:paddingRight="@dimen/default_padding_left_right">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/survey_consent_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/survey_consent_question"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/survey_consent_permission_notifications"
                    android:textSize="@dimen/default_textview_text_size_small" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_push_notifications" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/consent_permission_locat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/survey_consent_permission_location"
                    android:textSize="@dimen/default_textview_text_size_small" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_location" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/consent_permission_sens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/survey_consent_permission_sensors"
                    android:textSize="@dimen/default_textview_text_size_small" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_activity" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|end">

            <Button
                android:id="@+id/consent_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:text="@string/survey_consent_permission_button_consent"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/consent_decline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_grey"
                android:text="@string/survey_consent_permission_button_decline"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>