<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_padding_top_bottom"
        android:paddingBottom="@dimen/default_padding_top_bottom"
        android:paddingStart="@dimen/default_padding_left_right"
        android:paddingEnd="@dimen/default_padding_left_right">

        <TextView
            android:id="@+id/study_page_study_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_textview_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGreyPressed"/>

        <LinearLayout
            android:id="@+id/study_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/subscription_description_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/default_textview_text_size_small"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/subs_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/default_textview_text_size_small"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/default_textview_text_size_small"
                android:text="@string/subscription_permissions_title"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/survey_consent_permission_notifications"
                        android:textSize="@dimen/default_textview_text_size_small" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_action_push_notifications" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/permission_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/survey_consent_permission_location"
                        android:textSize="@dimen/default_textview_text_size_small" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_action_location" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/permission_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/survey_consent_permission_sensors"
                        android:textSize="@dimen/default_textview_text_size_small" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_action_activity" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/subs_unsubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:text="@string/btn_unsubscribe"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>